CAMBIOS FINALES YA ESTA, TKM MIL RAMA TKM MIL

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
     </section>
 
     <!-- aqui los hidden -->
+<div id='start' class='diapositiva hide'>
+      <div class='texto'>
+       Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+          -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
+          -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
+
+      </div>
+      <div class='opcion1Texto'> Darselo a Paula </div>
+      <div class="opcion1Id">paula</div>
+      <div class="opcion2Texto"> Darselo a Pato </div>
+      <div class="opcion2Id">pato</div>
+      <div class="srcName">todes.jpg</div>
+      <div class="EsFinal">false</div>
+    </div>
 
     <div id='paula' class='diapositiva hide'>
       <div class='texto'>
@@ -196,7 +210,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">mili</div>
   <div class="opcion2Texto">Lo lleva Malu</div>
   <div class="opcion2Id">malu</div>
-  <div class="srcName">gragry.jpg</div>
+  <div class="srcName">gragry.png</div>
   <div class="EsFinal">false</div>
 </div>
 
@@ -208,7 +222,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">sebaAd</div>
   <div class="opcion2Texto">Se encuentra con Male</div>
   <div class="opcion2Id">male</div>
-  <div class="srcName">lean.jpg</div>
+  <div class="srcName">lean.png</div>
   <div class="EsFinal">false</div>
 </div>
 
@@ -222,8 +236,8 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class='opcion1Texto'> Volver atrás</div>
   <div class="opcion1Id">jota</div>
   <div class="opcion2Texto">VOLVER EN EL TIEMPO</div>
-  <div class="opcion2Id">reload</div>
-  <div class="srcName">placeholder.jpg</div>
+  <div class="opcion2Id">start</div>
+  <div class="srcName">moto.png</div>
   <div class="EsFinal">false</div>
 </div>
 
@@ -458,12 +472,12 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
     Este no es el fin, ya que lo mejor está por venir, nos vemos en Buenos Aires.
 
   </div>
-  <div class='opcion1Texto'>null</div>
-  <div class="opcion1Id">null</div>
-  <div class="opcion2Texto">null</div>
-  <div class="opcion2Id">null</div>
+  <div class='opcion1Texto'>Volver a Jugar</div>
+  <div class="opcion1Id">start</div>
+  <div class="opcion2Texto">Pantalla inicial</div>
+  <div class="opcion2Id">reload</div>
   <div class="srcName">palermo.jpg</div>
-  <div class="EsFinal">true</div>
+  <div class="EsFinal"></div>
 </div>
 <div  id='error' class='diapositiva hide'>
   <div class='texto'>
