CAMBIOS FINALES YA ESTA, TKM MIL RAMA TKM MIL AHORA SI ES PERSONAL

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">nico</div>
   <div class="opcion2Texto">Siguen de gira</div>
   <div class="opcion2Id">ale</div>
-  <div class="srcName">recital.jpg</div>
+  <div class="srcName">recital.png</div>
   <div class="EsFinal">false</div>
 </div>
 
