--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ El día se alarga y, lejos de irse a mitad de la aburrida clase de biometría, d
   <div class="opcion1Id">sebaAd</div>
   <div class="opcion2Texto">Se lo lleva a Sebas LD</div>
   <div class="opcion2Id">sebaLd</div>
-  <div class="srcName">malu.jpg</div>
+  <div class="srcName">malu.png</div>
   <div class="EsFinal">false</div>
 </div>
 
