LAST FUCKING ONE

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ El día se alarga y, lejos de irse a mitad de la aburrida clase de biometría, d
   <div class="opcion1Id">paula</div>
   <div class="opcion2Texto">Lo envía a Sebas AD</div>
   <div class="opcion2Id">sebaAd</div>
-  <div class="srcName">rami.gif</div>
+  <div class="srcName">rami.png</div>
   <div class="EsFinal">false</div>
 </div>
 
